<resources>
    <string name="app_name">checkinproapp</string>
    <string name="email">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="se_connecter">Se connecter</string>
    <string name="cr_er_un_compte">Créer un compte</string>
    <string name="bienvenue_sur_l_application">Bienvenue sur l\'application !</string>
    <string name="pr_nom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="cin">CIN</string>
    <string name="gender_icon">g1\n</string>
    <string name="welcoming">Welcome to CheckInPro! Your ultimate companion for seamless check-ins and effortless management. Sign up now to streamline your experience and stay organized like never before. Let’s get started!</string>
    <string name="t">Create your account to get started</string>
    <string name="last_name">Last Name</string>
</resources>